include/Win32/Physics.NGDImport.hpp

struct NewtonHingeSliderUpdateDesc;
//-- type declarations -------------------------------------------------------
typedef float dFloat;
typedef float *PdFloat;
typedef void * PNewtonMesh;
typedef void * PNewtonBody;
typedef void * PNewtonWorld;
typedef void * PNewtonJoint;
typedef void * PNewtonCollision;
typedef NewtonHingeSliderUpdateDesc *PNewtonHingeSliderUpdateDesc;
struct DECLSPEC_DRECORD NewtonHingeSliderUpdateDesc
{
public:
	float m_accel;
	float m_minFriction;
	float m_maxFriction;
	float m_timestep;
};
typedef unsigned __cdecl (*NewtonUniversalCallBack)(const void * universal, PNewtonHingeSliderUpdateDesc desc);
typedef unsigned __cdecl (*NewtonCorkscrewCallBack)(const void * corkscrew, PNewtonHingeSliderUpdateDesc desc);
typedef void __cdecl (*NewtonUserBilateralCallBack)(const void * userJoint, float timestep, int threadIndex);
typedef NewtonUserBilateralCallBack *PNewtonUserBilateralCallBack;
typedef void __cdecl (*NewtonUserBilateralGetInfoCallBack)(const void * userJoint, PNewtonJointRecord info);
typedef NewtonUserBilateralGetInfoCallBack *PNewtonUserBilateralGetInfoCallBack;
//-- var, const, procedure ---------------------------------------------------
#define NewtonDLL L"newton32.dll"
extern "C" void * __cdecl NewtonConstraintCreateCorkscrew(const void * NewtonWorld, const PdFloat pivotPoint, const PdFloat pinDir, const void * childBody, const void * parentBody);
extern "C" void __cdecl NewtonCorkscrewSetUserCallback(const void * corkscrew, NewtonCorkscrewCallBack callback);
extern "C" float __cdecl NewtonCorkscrewGetJointPosit(const void * corkscrew);
extern "C" float __cdecl NewtonCorkscrewGetJointAngle(const void * corkscrew);
extern "C" float __cdecl NewtonCorkscrewGetJointVeloc(const void * corkscrew);
extern "C" float __cdecl NewtonCorkscrewGetJointOmega(const void * corkscrew);
extern "C" void __cdecl NewtonCorkscrewGetJointForce(const void * corkscrew, PdFloat Force);
extern "C" float __cdecl NewtonCorkscrewCalculateStopAlpha(const void * corkscrew, const PNewtonHingeSliderUpdateDesc desc, float angle);
extern "C" float __cdecl NewtonCorkscrewCalculateStopAccel(const void * corkscrew, const PNewtonHingeSliderUpdateDesc desc, float position);
extern "C" void * __cdecl NewtonConstraintCreateUniversal(const void * NewtonWorld, const PdFloat pivotPoint, const PdFloat pinDir0, const PdFloat pinDir1, const void * childBody, const void * parentBody);
extern "C" void __cdecl NewtonUniversalSetUserCallback(const void * universal, NewtonUniversalCallBack callback);
extern "C" float __cdecl NewtonUniversalGetJointAngle0(const void * universal);
extern "C" float __cdecl NewtonUniversalGetJointAngle1(const void * universal);
extern "C" float __cdecl NewtonUniversalGetJointOmega0(const void * universal);
extern "C" float __cdecl NewtonUniversalGetJointOmega1(const void * universal);
extern "C" void __cdecl NewtonUniversalGetJointForce(const void * universal, PdFloat Force);
extern "C" float __cdecl NewtonUniversalCalculateStopAlpha0(const void * universal, const PNewtonHingeSliderUpdateDesc desc, float angle);
extern "C" float __cdecl NewtonUniversalCalculateStopAlpha1(const void * universal, const PNewtonHingeSliderUpdateDesc desc, float angle);
extern "C" void * __cdecl NewtonConstraintCreateUpVector(const void * NewtonWorld, const PdFloat pinDir, const void * Body);
extern "C" void __cdecl NewtonUpVectorGetPin(const void * upVector, PdFloat pin);
extern "C" void __cdecl NewtonUpVectorSetPin(const void * upVector, const PdFloat pin);
extern "C" void * __cdecl NewtonConstraintCreateUserJoint(const void * NewtonWorld, int MaxDOF, PNewtonUserBilateralCallBack callback, PNewtonUserBilateralGetInfoCallBack GetInfo, const void * childBody, const void * parentBody);
extern "C" void __cdecl NewtonUserJointSetFeedbackCollectorCallback(const void * joint, PNewtonUserBilateralCallBack GetFeedback);
extern "C" void __cdecl NewtonUserJointAddLinearRow(const void * joint, const PdFloat pivot0, const PdFloat pivot1, const PdFloat dir);
extern "C" void __cdecl NewtonUserJointAddAngularRow(const void * joint, float RelativeAngle, const PdFloat dir);
extern "C" void __cdecl NewtonUserJointAddGeneralRow(const void * joint, const PdFloat Jacobian0, const PdFloat Jacobian1);
extern "C" void __cdecl NewtonUserJointSetRowMinimumFriction(const void * joint, float Friction);
extern "C" void __cdecl NewtonUserJointSetRowMaximumFriction(const void * joint, float Friction);
extern "C" void __cdecl NewtonUserJointSetRowAcceleration(const void * joint, float Acceleration);
extern "C" void __cdecl NewtonUserJointSetRowSpringDamperAcceleration(const void * joint, float springK, float springD);
extern "C" void __cdecl NewtonUserJointSetRowStiffness(const void * joint, float Stiffness);
extern "C" float __cdecl NewtonUserJointGetRowForce(const void * joint, int Row);
extern "C" void * __cdecl NewtonMeshCreate(const void * World);
extern "C" void * __cdecl NewtonMeshCreateFromMesh(const void * Mesh);
extern "C" void * __cdecl NewtonMeshCreateFromCollision(const void * collision);
extern "C" void * __cdecl NewtonMeshConvexHull(const void * NewtonWorld, int count, const PdFloat vertexCloud, int strideInBytes, float tolerance);
extern "C" void * __cdecl NewtonMeshCreatePlane(const void * World, const PdFloat locationMatrix, float width, float breadth, int material, const PdFloat textureMatrix0, const void *textureMatrix1);
extern "C" void __cdecl NewtonMeshDestroy(const void * Mesh);
extern "C" void __cdecl NewtonMeshCalculateOOBB(const void * Mesh, const PdFloat matrix, PdFloat x, PdFloat y, PdFloat z);